[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/MorseChart.png" type="Texture" id=1]
[ext_resource path="res://Assets/Morse/Morse_lol.png" type="Texture" id=2]
[ext_resource path="res://Assets/Morse/Morse_loo.png" type="Texture" id=3]
[ext_resource path="res://Assets/Morse/Morse_ll.png" type="Texture" id=4]
[ext_resource path="res://Assets/Morse/Morse_oloo.png" type="Texture" id=5]
[ext_resource path="res://Assets/Morse/Morse_o.png" type="Texture" id=6]
[ext_resource path="res://Assets/Morse/Morse_ol.png" type="Texture" id=7]
[ext_resource path="res://Assets/Morse/Morse_ooool.png" type="Texture" id=8]
[ext_resource path="res://Assets/Morse/Morse_ool.png" type="Texture" id=9]
[ext_resource path="res://Assets/Morse/Morse_lloo.png" type="Texture" id=10]
[ext_resource path="res://Assets/Morse/Morse_oll.png" type="Texture" id=11]
[ext_resource path="res://Assets/Morse/Morse_ollll.png" type="Texture" id=12]
[ext_resource path="res://Assets/Morse/Morse_oolo.png" type="Texture" id=13]
[ext_resource path="res://Assets/Morse/Morse_llll.png" type="Texture" id=14]
[ext_resource path="res://Assets/Morse/Morse_olll.png" type="Texture" id=15]
[ext_resource path="res://Assets/Morse/Morse_llllo.png" type="Texture" id=16]
[ext_resource path="res://Assets/Morse/Morse_lll.png" type="Texture" id=17]
[ext_resource path="res://Assets/Morse/Morse_olo.png" type="Texture" id=18]
[ext_resource path="res://Assets/Morse/Morse_lllo.png" type="Texture" id=19]
[ext_resource path="res://Assets/Morse/Morse_llo.png" type="Texture" id=20]
[ext_resource path="res://Assets/Morse/Morse_oooo.png" type="Texture" id=21]
[ext_resource path="res://Assets/Morse/Morse_ooo.png" type="Texture" id=22]
[ext_resource path="res://Assets/Morse/Morse_llloo.png" type="Texture" id=23]
[ext_resource path="res://Assets/Morse/Morse_lo.png" type="Texture" id=24]
[ext_resource path="res://Assets/Morse/Morse_llol.png" type="Texture" id=25]
[ext_resource path="res://Assets/Morse/Morse_oo.png" type="Texture" id=26]
[ext_resource path="res://Assets/Morse/Morse_llooo.png" type="Texture" id=27]
[ext_resource path="res://Assets/Morse/Morse_oolll.png" type="Texture" id=28]
[ext_resource path="res://Assets/Morse/Morse_oool.png" type="Texture" id=29]
[ext_resource path="res://Assets/Morse/Morse_oooll.png" type="Texture" id=30]
[ext_resource path="res://Assets/Morse/Morse_loll.png" type="Texture" id=31]
[ext_resource path="res://Assets/Morse/Morse_lolo.png" type="Texture" id=32]
[ext_resource path="res://Assets/Morse/Morse_ooll.png" type="Texture" id=33]
[ext_resource path="res://Assets/Morse/Morse_l.png" type="Texture" id=34]
[ext_resource path="res://Assets/Morse/Morse_lllll.png" type="Texture" id=35]
[ext_resource path="res://Assets/Morse/Morse_ooooo.png" type="Texture" id=36]
[ext_resource path="res://Assets/Morse/Morse_ollo.png" type="Texture" id=37]
[ext_resource path="res://Assets/Morse/Morse_looo.png" type="Texture" id=38]
[ext_resource path="res://Assets/Morse/Morse_lool.png" type="Texture" id=39]
[ext_resource path="res://Assets/Morse/Morse_loooo.png" type="Texture" id=40]
[ext_resource path="res://Scenes/MorseChart.gd" type="Script" id=41]

[node name="MorseChart" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.145, 0.145 )
script = ExtResource( 41 )

[node name="Image" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="L" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MorseO" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 6 )

[node name="MorseOl" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 7 )

[node name="MorseOll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 11 )

[node name="MorseOlll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 15 )

[node name="MorseOllll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 12 )

[node name="MorseOlo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 18 )

[node name="MorseOloo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 5 )

[node name="MorseOo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 26 )

[node name="MorseOol" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 9 )

[node name="MorseOoll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 33 )

[node name="MorseOolll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 28 )

[node name="MorseOolo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 13 )

[node name="MorseOoo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 22 )

[node name="MorseOool" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 29 )

[node name="MorseOooll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 30 )

[node name="MorseOooo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 21 )

[node name="MorseOoool" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 8 )

[node name="MorseOoooo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 36 )

[node name="MorseL" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 34 )

[node name="MorseLl" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 4 )

[node name="MorseLll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 17 )

[node name="MorseLlll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 14 )

[node name="MorseLllll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 35 )

[node name="MorseLlllo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 16 )

[node name="MorseLllo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 19 )

[node name="MorseLlloo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 23 )

[node name="MorseLlo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 20 )

[node name="MorseLlol" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 25 )

[node name="MorseLloo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 10 )

[node name="MorseLlooo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 27 )

[node name="MorseLo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 24 )

[node name="MorseLol" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 2 )

[node name="MorseLoll" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 31 )

[node name="MorseLolo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 32 )

[node name="MorseLoo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 3 )

[node name="MorseLool" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 39 )

[node name="MorseLooo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 38 )

[node name="MorseOllo" type="Sprite" parent="L"]
visible = false
scale = Vector2( 1, 1 )
texture = ExtResource( 37 )

[node name="MorseLoooo" type="Sprite" parent="L"]
visible = false
texture = ExtResource( 40 )
